src/app/components/movie-list/movie-list.component.scss
.movieListContainer {
  height: 92%;

  .movieListCard {
    height: 100%;
    overflow: scroll;

    .searchDiv {
      display: flex;
      justify-content: center;
      align-items: center;

      .searchInput {
        width: 14em;
      }

      .searchTrigger {
        height: 2.5em;
        width: 3em;
        margin-left: 8px;
        margin-bottom: 8px;
      }
    }

    .listContent {
      max-height: 33%;
      display: flex;
      object-fit: contain;
      border-bottom: 1px solid white;
      padding-top: 30px;
      justify-content: space-between;

      .movieListThumb {
        display: flex;
        flex: 1;
        height: 180px;
        width: 120px;
        margin-right: 30px;
        border: 1px solid white;
      }

      .movieInfoDiv {
        display: flex;
        flex-direction: column;
        flex: 2;
        flex-wrap: wrap;

        .movieTitleDiv {
          display: flex;
          border-bottom: 1px solid white;
          margin-bottom: 3px;
          flex: 0.5;
          color: #3f88c5;
        }

        .movieDescDiv {
          height: 125px;
          display: flex;
          font-size: 12px;
          flex: 1;
          overflow: hidden;
        }

        .movieRateDiv {
          display: flex;
          flex: 0.5;
          justify-content: space-between;
          margin-top: 10px;
          margin-bottom: 10px;
          font-size: 16px;
          overflow: hidden;

          .ratingDiv {
            display: flex;
            flex-direction: column;
            margin-right: 5px;
          }

          .countDiv {
            display: flex;
            flex-direction: column;
            margin-left: 5px;
          }
        }
      }
    }
  }
}

mat-divider {
  margin-bottom: 10px;
}

